# rmw_benchmark

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  cyclonedds_env.sh  zenoh_env.sh
autoware_planning_simulation/: Makefile  collect_statistics.sh
autoware_planning_simulation/cyclonedds/: cyclonedds_env.sh  nodes.txt  services.txt
autoware_planning_simulation/zenoh/: nodes.txt  services.txt  zenoh_env.sh
cyclonedds_baseline/: SUMMARY.md  topics.txt
gscam_stress/: .gitignore  Makefile  README.md
gscam_stress/cyclonedds/: cyclonedds_env.sh  roudi_config.toml
gscam_stress/rmw_config/: cyclonedds_shm.xml  zenoh_shm.json5
gscam_stress/scripts/: README.md  analyze_results.py  benchmark_rmw.sh  quick_boundary_test.sh  run_boundary_test.sh
gscam_stress/src/stress_test/: CMakeLists.txt  README.md
gscam_stress/src/stress_test/config/: 1080p60.conf  1280x720_45fps.conf  1280x720_60fps.conf  1920x1080_45fps.conf  2560x1440_30fps.conf  2560x1440_45fps.conf  2560x1440_60fps.conf  3840x2160_45fps.conf  3840x2160_60fps.conf  640x480_30fps.conf  camera.conf.example  custom.conf.example  extreme.conf  extreme_besteffort.conf  high.conf  high_besteffort.conf  high_transient.conf  low.conf  medium.conf
gscam_stress/src/stress_test/launch/: stress_test.launch.py
gscam_stress/src/stress_test/rmw_config/: cyclonedds_shm.xml
gscam_stress/src/stress_test/src/: image_subscriber_node.cpp
gscam_stress/zenoh/: zenoh_env.sh
scripts/: collect_statistics.sh
src/stress_test/: package.xml
src/stress_test/config/: zenoh_shm.json5  (+1 more)
zenoh_experimental/: SUMMARY.md
(+61 files in other folders)
